another quote and quote fixing

--- a/quotes.org
+++ b/quotes.org
@@ -209,7 +209,7 @@ Tomorrow do thy worst, for I have lived today.”
 
 "And so for many Americans, the nuclear family has become a lonely institution -
  and childhood, one long unpaid internship meant to secure a spot in a dwindling
- middle class”
+ middle class"
    - Kim Brooks, NYT
 
 "In politics, identity is an appeal to authority — the moral authority of the
@@ -252,7 +252,7 @@ end, a trap from which there’s no easy escape and maybe no desire for escape"
  reinforcing exactly the wrong lesson.
 
  So that’s the extreme of a wicked environment where your feedback teaches
- exactly the wrong lesson.”"
+ exactly the wrong lesson."
    - David Epstein
 :end:
 
@@ -265,6 +265,10 @@ end, a trap from which there’s no easy escape and maybe no desire for escape"
    - Michel de Montaigne
 
 "Hypocrisy is the homage vice pays to virtue."
+
+"Get rid of your lawns, lawns are total biological deserts. It’s just grass with
+ pesticides. The way it’s grown does not support a lot of biodiversity."
+   - Dr. May Berenbaum
 
 "So marvelous is the power of conscience! It makes us betray, accuse and fight
  ourselves, and, in the absence of an outside witness, it brings us forward
