--- a/quotes.org
+++ b/quotes.org
@@ -91,6 +91,18 @@ Tomorrow do thy worst, for I have lived today.”
 “Death destroys a man; the idea of Death saves him”
    - E. M. Forster
 
+"The best bridge between despair and hope is a good night’s sleep"
+   - E. Joseph Cossman, American entrepreneur
+
+"I think we get it wrong a lot, especially in this country. It's all about
+ winning. Winning, winning, winning. People who are considered "winners" are in
+ my mind, some of the great losers of all time and people who are considered
+ "losers" are, to me, some of the great winners of all time."
+   - Ron Shelton
+
+"Sometimes you have to play a long time to be able to play like yourself."
+   - Miles Davis
+
 “It is said that his time was easier than ours, but I doubt it — no time can be
  easy for one who is living through it.”
    - James Baldwin on Shakespeare
@@ -107,6 +119,11 @@ Tomorrow do thy worst, for I have lived today.”
  no respect he ceases to love… “Above all, avoid falsehood, every kind of
  falsehood, especially to yourself.”
    - Zosima, The Brothers Karamozov
+
+"the most reasonable and widely accepted definition of personality is behaviour
+ of an individual which is relatively constant over time and doesn’t depend on
+ context (Perugni et al, 2016)"
+   - [[https://medium.com/@Soccermatics/how-swedes-were-fooled-by-one-of-the-biggest-scientific-bluffs-of-our-time-de47c82601ad][How Swedes Were Fooled]]
 
 
 * Literature
