--- a/newSpaced.org
+++ b/newSpaced.org
@@ -20,6 +20,7 @@ Something [like] this
 * Knowledge
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       017758aa-6e41-47ec-82a7-75c8dff3182a
   :END:
 The [Hoggar Mountains] are a highland region in the central Sahara, southern
 Algeria, along the Tropic of Cancer. The region contains the tomb of Tin Hinan,
@@ -27,6 +28,7 @@ the 4th century legendary Tuareg mythical queen.
 ** Noun                                                               :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       52c0641b-7e9d-4abe-87d6-a342d4c12c3e
   :END:
 Define the word
 *** English
@@ -36,28 +38,34 @@ the act, action, or quality of adhering (give support, maintain loyalty, etc)
 steady of faithful attachment
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       22f28578-60c4-47ac-974c-af1ea49bce66
   :END:
 [griot]: a West African historian, storyteller, praise singer, poet, or musician
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       641b6064-93b8-4567-935d-96af463d1474
   :END:
 [probiotics]:thought to help restore the natural balance of bacteria in your gut
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       a8f9b07c-97dd-40c8-8308-91334cb84629
   :END:
 [Lien]: a form of security interest granted over an item of property to secure
 the payment of a debt or performance of some other obligation.
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       8db02d14-5f33-4120-b0d0-b2fb833ab114
   :END:
 [Short sale]: a sale of real estate in which the net proceeds from selling the
 property will fall short of the debts secured by liens against the property.
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       a15f9cbf-c2d8-4404-9f33-bb7bd32ea85b
   :END:
 [Damascene moment]: the religious conversion of Paul
 ** Phrase                                                             :drill:
   :PROPERTIES:
+  :ID:       1fd6459f-ad13-4443-884b-d35af250e0af
   :END:
 [persona non grata]: person not appreciated. Foreign person whose entering or
 remaining in a particular country is prohibited.
@@ -67,6 +75,7 @@ Not popular or accepted by others
 ** Adjective                                                          :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       c020ac03-c6f9-4cf3-a410-1f240dc159d0
   :END:
 Define the word
 *** French
@@ -76,6 +85,7 @@ conforming to accepted standards
 ** Adjective                                                          :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       489bd389-2ad9-4ffe-b8a0-05f13a5573e6
   :END:
 Define the word
 *** French
@@ -85,6 +95,7 @@ my friend
 ** Adjective                                                          :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       dd5df8cd-ccf0-466c-a9a4-3eef4966fb8b
   :END:
 Define the word
 *** French
@@ -93,6 +104,7 @@ cheri
 darling
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       168a9fb1-2eef-402a-8ada-ec3501770cab
   :END:
 [Perseus]: legendary founder of Mycenae and of the Perseid dynansty. Son of
 Zeus and mortal Danae
@@ -100,6 +112,7 @@ Zeus and mortal Danae
 ** Noun                                                    :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       756cb77a-7924-430a-8e8b-d43ce1f0c918
   :END:
 Define the word
 *** English
@@ -111,6 +124,7 @@ filled with bitter criticism or malice
 ** Noun                                                               :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       a18d61ca-f618-4b2c-ae1e-5f3d11ecd1a6
   :END:
 Define the word
 *** Gaelic
@@ -119,6 +133,7 @@ Slainte
 health, commenly used as a toast
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       2a8a4813-7cd7-4a33-9d0b-c0c1e32812c9
   :END:
 [Dog-whistle politics]: political messaging employing coded language that
 appears to mean one thing to the general population but has an additional,
@@ -127,6 +142,7 @@ different, or more specific resonance for a targeted subgroup.
 ** Phrase                                                             :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       6d10a283-2291-4688-9ea2-2579a415d1cb
   :END:
 Define the word
 *** Latin
@@ -137,6 +153,7 @@ Mea culpa
 ** Noun                                                               :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       7ffb88b8-40a3-4778-8f69-b1894a276e36
   :END:
 Define the word
 *** English
@@ -150,6 +167,7 @@ Hotels.
 ** Adjective                                                          :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       c888efd3-e995-4f96-ae85-1c2a97ca02f4
   :END:
 Define the word
 *** English
@@ -159,6 +177,7 @@ marked by hot temper and easily provoked anger
 ** Verb                                                               :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       877a11d3-c519-4d8c-b743-692025ca8f4b
   :END:
 Define the word
 *** English
@@ -168,6 +187,7 @@ the action of proroguing (ending) an essembly, especially a parliament.
 ** Noun                                                               :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       a9a89812-d9e6-400b-bc39-769f80e5c0fb
   :END:
 Define the word
 *** English
@@ -178,6 +198,7 @@ a physical or mental exertion or piece of work.
 agony, torment
 ** Person                                                             :drill:
   :PROPERTIES:
+  :ID:       7644044d-8b79-4d97-acbd-a6a7952d6a80
   :END:
 Romulus:
 [The legendary founder and first king of Rome. Various traditions attribute the]
@@ -186,6 +207,7 @@ Romulus:
 
 ** Person                                                             :drill:
   :PROPERTIES:
+  :ID:       f1ba2888-a00c-47b4-a1c7-8c54d66a0833
   :END:
 Seneca the Younger:
 [A Roman trained in rhetoric and philosophy. Known for his philosophical work]
@@ -195,6 +217,7 @@ Seneca the Younger:
 
 ** Person                                                             :drill:
   :PROPERTIES:
+  :ID:       8af028db-3ee3-4052-89f3-eea8b528d88e
   :END:
 Demosthenes:
 [A Greek statesman and great orator of ancient Athens. His orations constitute]
@@ -204,6 +227,7 @@ Demosthenes:
 
 ** Person                                                             :drill:
   :PROPERTIES:
+  :ID:       f0ce0960-5f47-4af7-b098-e92c3768370f
   :END:
 Plutarch:
 [a Greek biographer and essayist, known primarily for his Parallel]
@@ -217,6 +241,7 @@ Plutarch:
 ** Adjective, Noun, Verb                                              :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       c56387a3-582f-47bb-8fff-61ef9b486b7d
   :END:
 Define the word
 *** English
@@ -249,6 +274,7 @@ skillful or judicius arrangement in literary compositions
 
 ** Fact                                                               :drill:
   :PROPERTIES:
+  :ID:       07508867-e432-4835-a524-de3101f7acb5
   :END:
 [Potemkin Village] is any construction (literal or figurative) build solely to
 deceive others into thinking that a situation is better than it is.
