--- a/quotes.org
+++ b/quotes.org
@@ -172,6 +172,9 @@ Tomorrow do thy worst, for I have lived today.”
  they reach out to you.""
    - Steve Cheney
 
+"You don't rise to your goals, you fall to the level of your systems"
+   - James Clear
+
 “Most geniuses—especially those who lead others—prosper not by deconstructing
  intricate complexities but by exploiting unrecognized simplicities.”
    - Andy Benoit
@@ -287,14 +290,16 @@ end, a trap from which there’s no easy escape and maybe no desire for escape"
  pesticides. The way it’s grown does not support a lot of biodiversity."
    - Dr. May Berenbaum
 
+"The forest was shrinking, but the Trees kept voting for the Axe, for the Axe
+ was clever and convinced the Trees that because his handle was made of wood, he
+ was one of them."
+   - Proverb
+
 "So marvelous is the power of conscience! It makes us betray, accuse and fight
  ourselves, and, in the absence of an outside witness, it brings us forward
  against ourselves."
        `Plying a secret whip, our soul as torturer.` - Juvenal
    - Michel de Montaigne
-
-"You don't rise to your goals, you fall to the level of your systems"
-   - James Clear
 
 "Spirit of iron makes skin of stone."
    - Ta-Nehisi Coates, Black Panther
